Mírný pokrok v mezích zákona

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,3 +24,7 @@ format:
 lang: cs
 date: today
 date-format: iso
+
+bibliography: literatura.bib
+reference-section-title: Literatura
+csl: iso690-numeric-brackets-cs.csl
